# aisearch-openai-rag-audio

./: API_INTEGRATION_GUIDE.md  BACKEND_INTEGRATION_COMPLETE.md  BOTH_TOGGLES_COMPLETE.md  FRONTEND_DEPLOYMENT_GUIDE.md  MICROPHONE_FIX_COMPLETE.md  PDF_SPECIFIC_SEARCH_GUIDE.md  PRODUCTION-READY.md  README.md  README_DEPLOY.md  README_SERVICE.md  TOGGLE_PROOF_TEST.py  aisearch-backend.service  api_pdf_specific_search.py  api_test_line_numbers.py  backend.pid  bernoulli_content.html  comprehensive_pdf_test.py  demo_line_seeking.py  deploy_complete_frontend.sh  deploy_production.sh  deployment-config.md  direct_api_test.py  direct_line_extraction.py  domain_setup_demo.sh  ecosystem.backend.config.js  ecosystem.config.js  ecosystem.frontend.config.js  extract_physics_pages.py  find_bernoulli.py  find_bernoulli_simple.py  index_and_search.py  instructions.txt  manual_physics_index.py  multi_pdf_line_demo.py  nginx-final.conf  nginx-production-new.conf  nginx-production.conf  nginx-test.conf  ocr_physics_indexer.py  package-lock.json  (+25 more)
app/backend/: aisearch_service.sh  app.py  app_data.db  auth_middleware.py  backend_integration.py  call_handler.py  celery_config.py  database.py  database_init.py  database_schema.sql  document_indexer.py  domain_config.py  enhanced_pdf_api.py  enhanced_pdf_processor.py  enhanced_pdf_tokens.db  frontend_components.py  local_documents.json  local_documents.json.backup  nohup.out  production_config.py  pyproject.toml  ragtools.py  requirements.txt  rtmt.py  run_worker.py  service_endpoints.py  simple_server.py  user_management.db  user_manager.py
(+222 files in other folders)
